# NFTbot-rust

./: Cargo.toml  README.md
configurations/: settings.toml  wallets.csv
src/: config.rs  main.rs  programs.rs  tpu_client.rs
src/modules/: canvas.rs  mod.rs
src/modules/candy_machine/: instance.rs  structs.rs  utils.rs
src/modules/magic_eden_launchpad/: instance.rs  mod.rs  structs.rs  utils.rs
src/modules/solport/: instance.rs  structs.rs  utils.rs
src/modules/temple/: instance.rs  structs.rs  utils.rs
src/utils/: mod.rs
