[package]
name = "anya_aio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.1", features = ["full"] }
# settings parsing
toml = "0.5.9"
csv = "1.1.6"
# errors
anyhow = "1.0.57"
# ux
viuer = "0.6.1"
dialoguer = "0.10.1"
log = "0.4.0"
env_logger = "0.8.4"
# solana
solana-account-decoder = "1.10.15"
solana-client = "1.10.15"
solana-sdk = "1.10.15"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
spl-associated-token-account = "1.0.5"
# others
hyper = { version = "0.14.19", features = ["full"] }
hyper-openssl = "0.9.2"
openssl = "0.10.40"
# encoding
bs58 = "0.4.0"
sha2 = "0.10.2"
libsecp256k1 = "0.7.0"
sha3 = "0.10.1"
hex = "0.4.3"
# utils
regex = "1.5.6"
chrono = "0.4.19"
borsh = "0.9.3"
futures-util = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
num_cpus = "1.13.1"
bincode = "1.3.3"
lazy_static = "1.4.0"
indexmap = "1.8.1"
rand = "0.8.5"